@@ -204,6 +204,7 @@
   Tor Lillqvist			tml@iki.fi
   Ulrich Drepper		drepper@ipd.info.uni-karlsruhe.de
   Warren Dodge			warren.l.dodge@Tektronix.com
+  Václav Zeman			vhaisman@gmail.com
   Vadim Zeitlin			vz-libtool@zeitlins.org
   Vincent Lefevre		vincent@vinc17.org
   Vincent Torri			vtorri@univ-evry.fr
